2003-01-26  Stefan Petersen  <spe@stacken.kth.se>

	* src/log.[hc], src/gerbv.c: Made sure error messages are 
	  directed to the right place (shell and popup) at the
	  right moment and that the error messages look nicer.

	* .cvsignore, man/.cvsignore, scheme/.cvsignore, src/.cvsignore:
	  Added these files submitted by Holger Waechtler. Thanks!

2003-01-25  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c, src/gerb_image.[hc]: Added a patch from
	  Holger Waechtler regarding G70/G71 which opened up a whole
	  can of worms. After thinking and hacking the following works:
	  * all in inches (as always).
	  * apertures in inches and vectors in millimeters.
	  The reason for not fixing apertures in millimeter are because
	  the calculation must happen in the drawing engine, since we
	  don't know until the moment of drawing if the paramters defines
	  a length or an angle. It's probably just a matter of fixing the
	  scaling when drawing, but I fix that later on.

2003-01-19  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Fixed bug in arc/circle drawing that caused
	  some odd cases (not noticed so far elsewhere) that made
	  ccw arcs to be drawn cw. Discovered by Jukka Marin. Thanks.

2003-01-16  Stefan Petersen  <spe@stacken.kth.se>

	* man/gerbv.1, src/gerbv.c : Updated documentation to reflect
	  the new log commandline switch.
	* files2tag, TODO: Minor documentation updates to reflect
	   reality.

2003-01-15 Stefan Petersen  <spe@stacken.kth.se>

	* src/Makefile.am, src/color.c, src/draw.c, src/drill.c,
	  src/gerber.c, src/gerbv.c, src/gerbv_screen.h. Added are
	  src/log.[hc], src/gerb_error.h: Finally have managed to
	  change all error reporting routines so it works with
	  Dinos log system. Now should all errors and warnings pop up
	  in an explicit window so it behaves like a proper 
	  X-application. Thanks to Dino I got this fixed. Maybe
	  all code is not what Dino expected, but anyhow I owe him